--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,40 +4,31 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  list-style-type: none;
-  text-decoration: none;
+  font-family: "Vazirmatn";
 }
 /* root variable */
 :root {
-  --color-secondary-900: rgb(17, 24, 39);
-  --color-secondary-800: rgb(31, 41, 55);
-  --color-secondary-700: rgb(55, 65, 81);
-  --color-secondary-600: #696969;
-  --color-secondary-500: rgb(107, 114, 128);
-  --color-secondary-400: rgb(156, 163, 175);
-  --color-secondary-300: rgb(209, 213, 219);
-  --color-secondary-200: rgb(229, 231, 235);
+  --color-secondary-200: #696969;
   --color-secondary-100: rgb(243, 244, 246);
   --color-secondary-50:#FFFFFF;
   --color-secondary-0: #AFCEDD;
 
-  --color-primary-900:#234894 ;
-  --color-primary-800: #219F95;
+  --color-primary-50:#234894 ;
+  --color-primary-0: #219F95;
 
-  --border-radius-tiny: 3px;
-  --border-radius-sm: 5px;
-  --border-radius-md: 7px;
   --border-radius-lg: 9px;
+
+  --font-size-s: 1.2rem;
+  --font-size-m: 1.5rem;
+  --font-size-l: 1.8rem;
+
+  --font-weight-normal: 500;
+  --font-weight-bold: 700;
+  --font-weight-strong: 900;
 }
 
-body {
-  font-family: sans-serif;
+body{
   background-color: var(--color-secondary-100);
-}
-
-body,
-* {
-  font-family: Vazirmatn;
 }
 
 html {
@@ -65,7 +56,7 @@ h1{
   margin-right: 1rem;
   border-radius: var(--border-radius-lg);
   transition: all 0.2s ease-out;
-  box-shadow:0 0 10 2px rgba(0, 0, 0, .1);
+  box-shadow:0 0 10px 2px rgba(0, 0, 0, .1);
   
 }
 .card:hover{
@@ -96,8 +87,8 @@ h1{
 }
 .upload-number{
   background-color:var(--color-secondary-0);
-  color:var(--color-primary-900) ;
-  font-size: 1.8rem;
+  color:var(--color-primary-100) ;
+  font-size: var(--font-size-l);
   padding: 0.7rem  1.5rem;
   border-radius: 6px;
   height: 40px;
@@ -105,25 +96,25 @@ h1{
 
 }
 .upload-documents{
-  color: var(--color-primary-900);
-  font-size: 1.6rem;
-  font-weight: 700;
+  color: var(--color-primary-50);
+  font-size: var(--font-size-m);
+  font-weight: var(--font-weight-bold);
   margin-right: 2rem;
 }
 .date{
-  color: var(--color-secondary-600);
-  font-size: 1.2rem;
-  font-weight: 400;
+  color: var(--color-secondary-200);
+  font-size: var(--font-size-s);
+  font-weight: var(--font-weight-normal);
 }
 
 .request-id{
-  font-size: 1.8rem;
-  font-weight: 900;
+  font-size: var(--font-size-l);
+  font-weight: var(--font-weight-strong);
   margin-top: 2rem;
 }
 .request-number{
-  color: var(--color-secondary-600);
-  font-size: 1.2rem;
+  color: var(--color-secondary-200);
+  font-size: var(--font-size-s);
   margin: 0.5rem;
 }
 
@@ -141,8 +132,8 @@ h1{
   border-radius: 8px; 
 }
 .name{
-  font-size: 1.5rem;
-  font-weight: 700;
+  font-size: var(--font-size-m);
+  font-weight: var(--font-weight-bold);
   margin-left: 3rem;
   white-space: nowrap;
 }
@@ -151,7 +142,7 @@ h1{
   width: 80%;
   height: auto;
   border: 0;
-  background-color:var(--color-primary-800) ;
+  background-color:var(--color-primary-0) ;
   border-radius: 8px;
   padding: 1.7rem;
   cursor: pointer;
@@ -159,7 +150,7 @@ h1{
 .btn a{
   text-decoration: none;
   color:var(--color-secondary-50) ;
-  font-size: 1.5rem;
-  font-weight: 500;
+  font-size: var(--font-size-m);
+  font-weight: var(--font-weight-normal);
   white-space: nowrap;
 }
