--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,7 +9,7 @@
 /* root variable */
 :root {
   --color-secondary-200: #696969;
-  --color-secondary-100: rgb(243, 244, 246);
+  --color-secondary-100: #f3f4f6;
   --color-secondary-50:#FFFFFF;
   --color-secondary-0: #AFCEDD;
 
